crates/oxc_react_compiler/tests/snapshots/useMemo-nested-ifs.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-nested-ifs.js
---
// @validateExhaustiveMemoizationDependencies:false
function Component(props) {
	let t0;
	bb0: {
		if (props.cond) {
			if (props.cond) {
				t0 = props.value;
				break bb0;
			}
		}
		t0 = undefined;
	}
	const x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
