crates/oxc_react_compiler/tests/snapshots/useMemo-simple.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-simple.js
---
import { c as _c } from "react/compiler-runtime";
function component(a) {
	const $ = _c(4);
	let t0;
	if ($[0] !== a) {
		t0 = [a];
		$[0] = a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	let t1;
	if ($[2] !== x) {
		t1 = <Foo x={x} />;
		$[2] = x;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
