crates/oxc_react_compiler/tests/snapshots/useMemo-switch-no-fallthrough.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-switch-no-fallthrough.js
---
// @validateExhaustiveMemoizationDependencies:false
function Component(props) {
	let t0;
	bb0: switch (props.key) {
		case "key": {
			t0 = props.value;
			break bb0;
		}
		default: {
			t0 = props.defaultValue;
		}
	}
	const x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
