crates/oxc_react_compiler/tests/snapshots/useMemo-void-babel-v1-default.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-void-babel-v1-default.tsx
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer" @panicThreshold:"none"
import { useMemo } from "react";
export function Component() {
	const $ = _c(1);
	console.log("computing");
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div>{undefined}</div>;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
