crates/oxc_react_compiler/tests/snapshots/useMemo-with-optional.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/useMemo-with-optional.js
---
import { c as _c } from "react/compiler-runtime";
// @enablePreserveExistingMemoizationGuarantees:false @validateExhaustiveMemoizationDependencies:false
import { useMemo } from "react";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.value) {
		t0 = (() => [props.value])() || [];
		$[0] = props.value;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ value: 1 }]
};
