crates/oxc_react_compiler/tests/snapshots/using-declaration-skips-only-that-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/using-declaration-skips-only-that-function.tsx
---
import { c as _c } from "react/compiler-runtime";
// `using`/`await using` disposal semantics aren't preserved yet, so `WithUsing` is
// skipped and emitted unchanged, while the structurally identical `Clean` component
// in the same file is still compiled.
function WithUsing(props) {
	using resource = props.acquire();
	return <div onClick={() => props.onClick()}>{props.text}</div>;
}
function Clean(props) {
	const $ = _c(5);
	let t0;
	if ($[0] !== props) {
		t0 = () => props.onClick();
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	let t1;
	if ($[2] !== props.text || $[3] !== t0) {
		t1 = <div onClick={t0}>{props.text}</div>;
		$[2] = props.text;
		$[3] = t0;
		$[4] = t1;
	} else {
		t1 = $[4];
	}
	return t1;
}
