crates/oxc_react_compiler/tests/snapshots/valid-set-state-in-useEffect-from-ref.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-set-state-in-useEffect-from-ref.js
---
No changes.
