crates/oxc_react_compiler/tests/snapshots/valid-setState-in-effect-from-ref-arithmetic.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/valid-setState-in-effect-from-ref-arithmetic.js
---
No changes.
